Updated: correction img src

--- a/Basic_HTML_and_CSS/Project/index.html
+++ b/Basic_HTML_and_CSS/Project/index.html
@@ -38,7 +38,7 @@
 					<!-- PHOTO-CONTAINER 1 -->
 					<div>
 						<div>
-							<img src="Thumbnail_1.jpg" alt="Map of Winterfell">
+							<img src="/Images/Thumb/Thumbnail_1.jpg" alt="Map of Winterfell">
 							<div>
 								<h3>Click to Englarge</h3>
 								<p>Come visit Winterfell, the capital of the Kingdom of The North!</p>
@@ -50,7 +50,7 @@
 					<!-- PHOTO-CONTAINER 2 -->
 					<div>
 						<div>
-							<img src="Thumbnail_2.jpg" alt="Map of The Vale">
+							<img src="/Images/Thumb/Thumbnail_2.jpg" alt="Map of The Vale">
 							<div>
 								<h3>Click to Englarge</h3>
 								<p>Come visit The Vale during the summer!<br />Only accessible during warm seasons!</p>
@@ -62,7 +62,7 @@
 					<!-- PHOTO-CONTAINER 3 -->
 					<div>
 						<div>
-							<img src="Thumbnail_3.jpg" alt="Map of The Wall">
+							<img src="/Images/Thumb/Thumbnail_3.jpg" alt="Map of The Wall">
 							<div>
 								<h3>Click to Englarge</h3>
 								<p>Help defend the Wall with the Sworn Brothers of the Night's Watch!</p>
@@ -74,7 +74,7 @@
 					<!-- PHOTO-CONTAINER 4 -->
 					<div>
 						<div>
-							<img src="Thumbnail_4.jpg" alt="Map of Westerlands">
+							<img src="/Images/Thumb/Thumbnail_4.jpg" alt="Map of Westerlands">
 							<div>
 								<h3>Click to Englarge</h3>
 								<p>Come visit the Westerlands and Casterly Rock!</p>
@@ -86,7 +86,7 @@
 					<!-- PHOTO-CONTAINER 5 -->
 					<div>
 						<div>
-							<img src="Thumbnail_5.jpg" alt="Map of The Stormlands">
+							<img src="/Images/Thumb/Thumbnail_5.jpg" alt="Map of The Stormlands">
 							<div>
 								<h3>Click to Englarge</h3>
 								<p>Come visit The Stormlands and the House Baratheon!</p>
@@ -98,7 +98,7 @@
 					<!-- PHOTO-CONTAINER 6 -->
 					<div>
 						<div>
-							<img src="Thumbnail_6.jpg" alt="Map of The Riverlands">
+							<img src="/Images/Thumb/Thumbnail_6.jpg" alt="Map of The Riverlands">
 							<div>
 								<h3>Click to Englarge</h3>
 								<p>Come visit the Riverlands!</p>
@@ -110,7 +110,7 @@
 					<!-- PHOTO-CONTAINER 7 -->
 					<div>
 						<div>
-							<img src="Thumbnail_7.jpg" alt="Map of The Reach">
+							<img src="/Images/Thumb/Thumbnail_7.jpg" alt="Map of The Reach">
 							<div>
 								<h3>Click to Englarge</h3>
 								<p>Come visit The Reach and The House of Tyrell of High garden!</p>
@@ -122,7 +122,7 @@
 					<!-- PHOTO-CONTAINER 8 -->
 					<div>
 						<div>
-							<img src="Thumbnail_8.jpg" alt="Map of The Iron Islands">
+							<img src="/Images/Thumb/Thumbnail_8.jpg" alt="Map of The Iron Islands">
 							<div>
 								<h3>Click to Englarge</h3>
 								<p>Come visit the Iron Islands!</p>
@@ -134,7 +134,7 @@
 					<!-- PHOTO-CONTAINER 9 -->
 					<div>
 						<div>
-							<img src="Thumbnail_9.jpg" alt="Map of Dorne">
+							<img src="/Images/Thumb/Thumbnail_9.jpg" alt="Map of Dorne">
 							<div>
 								<h3>Click to Englarge</h3>
 								<p>Come visit Dorne!</p>
