--- a/Basic_HTML_and_CSS/Project/Basic_CSS_demo_1.html
+++ b/Basic_HTML_and_CSS/Project/Basic_CSS_demo_1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="CSS/Basic_Style.css">
-<link rel="icon" type="image/png" sizes="16x16" href="./CSS/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="16x16" href="CSS/favicon-16x16.png">
     <title>Basic HTML Template</title>
 </head>
 <body>
