--- a/Basic_HTML_and_CSS/Project/Seven Kingdoms site/index.html
+++ b/Basic_HTML_and_CSS/Project/Seven Kingdoms site/index.html
@@ -4,20 +4,19 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>The Seven Kingdoms</title>
-	<link rel="stylesheet" type="text/css" href="../CSS/shared.css">
-	<link rel="stylesheet" type="text/css" href="../CSS/animations.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/seven-kingdoms.css">
+	<link rel="stylesheet" type="text/css" href="./CSS/seven-kingdoms-animations.css">
 </head>
 <body>
 	<!--NAV-->
-	<div class="wrap">
-		<div class="menu-container">
-			<ul class="menu">
-				<a href="#home"><li>HOME</li></a>
-				<a href="#gallery"><li>GALLERY</li></a>
-				<a href="#contact"><li>RESERVATIONS</li></a>
-			</ul>
+		<div>
+		<ul>
+			<li><a href="#home">Home</a></li>
+			<li><a href="#gallery">Gallery</a></li>
+			<li><a href="#contact">Contact</a></li>
+	  	</ul>
 		</div>
-	</div>
+	
 	<!--END NAV-->
 
 	<!--HOME-->
@@ -39,7 +38,7 @@
 			<!--PHOTO CONTAINER 1-->
 			<div class="photo-container">
 				<div class="photo">
-					<img src="../Images/Thumb/The_Stormlands.webp" alt="stormlands">
+					<img src="./Images/Thumb/The_Stormlands.webp" alt="stormlands">
 					<div class="photo-overlay">
 						<h3>The Stormlands</h3>
 						<p>Come visit!</p>
@@ -51,7 +50,7 @@
 			<!--PHOTO CONTAINER 2-->
 			<div class="photo-container">
 				<div class="photo">
-					<img src="../Images/Thumb/The_Riverlands.webp" alt="riverlands">
+					<img src="./Images/Thumb/The_Riverlands.webp" alt="riverlands">
 					<div class="photo-overlay">
 						<h3>The Riverlands</h3>
 						<p>Come visit!</p>
@@ -63,7 +62,7 @@
 			<!--PHOTO CONTAINER 3-->
 			<div class="photo-container">
 				<div class="photo">
-					<img src="../Images/Thumb/Dorne.webp" alt="dorne">
+					<img src="./Images/Thumb/Dorne.webp" alt="dorne">
 					<div class="photo-overlay">
 						<h3>Dorne</h3>
 						<p>Come visit!</p>
@@ -75,7 +74,7 @@
 			<!--PHOTO CONTAINER 4-->
 			<div class="photo-container">
 				<div class="photo">
-					<img src="../Images/Thumb/Iron_Islands.webp" alt="iron islands">
+					<img src="./Images/Thumb/Iron_Islands.webp" alt="iron islands">
 					<div class="photo-overlay">
 						<h3>The Iron Islands</h3>
 						<p>Come visit!</p>		
@@ -87,7 +86,7 @@
 			<!--PHOTO CONTAINER 5-->
 			<div class="photo-container">
 				<div class="photo">
-					<img src="../Images/Thumb/casterly rock.webp" alt="casterly rock">
+					<img src="./Images/Thumb/casterly rock.webp" alt="casterly rock">
 					<div class="photo-overlay">
 						<h3>Casterly Rock</h3>
 						<p>Come visit!</p>
@@ -99,7 +98,7 @@
 			<!--PHOTO CONTAINER 6-->
 			<div class="photo-container">
 				<div class="photo">
-					<img src="../Images/Thumb/winterfell.jpg" alt="winterfell">
+					<img src="./Images/Thumb/winterfell.jpg" alt="winterfell">
 					<div class="photo-overlay">
 						<h3>Winterfell</h3>
 						<p>Come visit!</p>		
@@ -147,7 +146,7 @@
 
 <!-- FOOTER -->
 <div id="footer">
-	www.thespacestation.com &nbsp; &copy; 2016
+	www.thesevenkingdoms.travel &nbsp; &copy; 2022
 </div>
 <!-- END FOOTER -->
 
