--- a/Basic_HTML_and_CSS/Project/Effecting-images-with-CSS/Basic_CSS_demo_1.html
+++ b/Basic_HTML_and_CSS/Project/Effecting-images-with-CSS/Basic_CSS_demo_1.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="CSS/Basic_Style.css">
-<link rel="icon" type="image/png" sizes="16x16" href="CSS/favicon-16x16.png">
+    <link rel="stylesheet" type="text/css" href="./CSS/Basic_Style.css">
+<link rel="icon" type="image/png" sizes="16x16" href="./CSS/favicon-16x16.png">
     <title>Basic HTML Template</title>
 </head>
 <body>
