Updated Academy Cinemas site

--- a/Basic_HTML_and_CSS/Project/Academy Cinemas Bootstrap site/academy_cinemas.html
+++ b/Basic_HTML_and_CSS/Project/Academy Cinemas Bootstrap site/academy_cinemas.html
@@ -138,12 +138,22 @@
               </div>
             </div>
           </div>
-
+<!--------------------- Jumbotron Heading------------------------>
+<div class="jumbotron jumbotron-fluid bg-info mt-5 text-center">
+  <div class="container">
+    <h1 class="display-4 hidden-sm-down" style="color:#fff;font-family:roboto;font-weight:900;text-transform:uppercase;">
+    Movie Deals</h1>
+    <p class="lead">Check out our monthly deals...</p>
+    <!------------- Movie Deals ------------>
+    <button type="button" class="btn btn-outline-primary" data-toggle="model" data-target="register">See our monthly deals!
+    </button>
+  </div>
+</div>
 
 <!-----------------------MOVIE REWARDS------------------------->
           <div class="text-center">
                 <form>
-                        <h1 class="text-primary my-5" id="movierewards">Sign up for Movie Club Rewards |</h1>
+                        <h1 class="text-primary my-5" id="movierewards">Stay current on movies!</h1>
                     <div class="form-group">
                         <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
                     </div>
